--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
-
+    "react-star-ratings": "^2.3.0",
     "react-youtube": "^10.1.0",
-
     "styled-components": "^5.3.11",
     "styled-reset": "^4.4.7",
     "swiper": "^9.4.1",
