새로고침 오류 해결
 redux persist 사용하여 로컬 스토리지에 저장하여 새로고침해도 데이터 유지 가능

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
     "react-youtube": "^10.1.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.11",
     "styled-reset": "^4.4.7",
     "swiper": "^9.4.1",
