--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "express": "^4.18.2",
     "html-react-parser": "^4.0.0",
+    "http": "^0.0.1-security",
     "i18next": "^23.2.3",
     "node-html-parser": "^6.1.5",
     "react": "^18.2.0",
@@ -22,6 +24,7 @@
     "react-star-ratings": "^2.3.0",
     "react-youtube": "^10.1.0",
     "redux-persist": "^6.0.0",
+    "socket.io": "^4.7.1",
     "styled-components": "^5.3.11",
     "styled-reset": "^4.4.7",
     "swiper": "^9.4.1",
