--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-react-parser": "^4.0.0",
     "http": "^0.0.1-security",
     "i18next": "^23.2.3",
+    "lottie-react": "^2.4.0",
     "node-html-parser": "^6.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
